# cmake_training

./: CMakeLists.txt  CMakeLists_build_thuong.txt
project_test/: Unittest_Guidline.pptx
project_test/commonlib/include/: mystring.h
project_test/commonlib/source/: mystring.cpp
project_test/datacsv/: data.csv
project_test/main/: main.cpp
project_test/makefile/: person.db  sqlhandle.cpp  supermaket.db  tmp.txt
project_test/toturial_project/include/: customer.h  person.h  sale.h  saler.h  sqlhandle.h
project_test/toturial_project/source/: atoi.cpp  customer.cpp  person.cpp  sale.cpp  saler.cpp  sqlhandle.cpp
